Minor UI redesigns and fixes (#22)
* Bug fix : Active deposits, deposit amount display

* Bug fix : deposit button loading

* Borrow Loading Bug fix

* modified toast for get tokens

* modified toast for get tokens

* added handle max logic

* Bug fix | Loading button

* styled scrollbar

* bug fix: loading button (filter & include)

* ignore-build-checks next-config

* tx-explorer-tab

* changed swapped amount display in tx history

* removed extra scrollbar in active loans

* border styled active-deposit/loans

* changed scrollbar-track color

* removed scroll from repaid loans tab

* resize scrollbar width

--- a/src/pages/scrollbar.css
+++ b/src/pages/scrollbar.css
@@ -1,10 +1,12 @@
 *::-webkit-scrollbar {
-	width: 1em;
+	width: .5em;
     border-radius : 12px;
 }
 
 *::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+
+	box-shadow: inset 0 0 6px #c0c0c0;
+
     border-radius : 12px;
 
 }
